<?xml version="1.0" encoding="utf-8"?>

<LinearLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#E2DEBC">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:src="@drawable/image"
        android:background="#000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="@font/agbalumo"
        android:layout_marginStart="8dp"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="@font/agbalumo"
        android:layout_marginStart="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text3"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/abhaya_libre"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text4"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/abhaya_libre"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/abhaya_libre"
        android:text="@string/text5"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/orange_corner"
        android:fontFamily="@font/baloo_paaji"
        android:text="@string/start"
        android:textColor="#090909"
        android:textSize="35sp"
        android:id="@+id/btnStart"
        />



















</LinearLayout>









