<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context = ".SignUpActivity"
    android:background="#E2DEBC">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40sp"
            android:text="@string/create"
            android:textColor="#000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4sp"
            android:text="@string/account"
            android:textColor="#000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="32dp"
            android:text="@string/email"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="#000"
            android:textSize="18sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="0dp"
            android:text="@string/pass"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="#000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="0dp"
            android:text="@string/re_enter"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="#000"
            android:textSize="18sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="0dp"
            android:text="@string/Name"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/enter_full_name"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="#000"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#BD6623"
            android:padding="14dp"
            android:text="@string/signup"
            android:textStyle="bold"
            android:id="@+id/btnSignUp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bottom_wave" />


        </LinearLayout>


    </LinearLayout>


</ScrollView>



</LinearLayout>