<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context= ".LoginActivity"
    android:background="#E2DEBC">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40sp"
                android:text="@string/hi"
                android:textColor="#000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/pls"
                android:textColor="#000"
                android:textSize="30sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/email"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/enter_your_email"
                android:inputType="text"
                android:padding="12dp"
                android:textColorHint="#000"
                android:textSize="18sp"
                android:layout_margin="13dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/pass"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="text"
                android:padding="12dp"
                android:textColorHint="#000"
                android:textSize="18sp"
                android:layout_margin="13dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:text="@string/forgate"
                android:textStyle="bold"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/logwith"
                    android:textStyle="bold"/>


                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="#000" />


            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#BD6623"
                android:text="@string/login"
                android:textStyle="bold"
                android:id="@+id/btnLogin"
                android:layout_margin="13dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:src="@drawable/bottom_wave"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="0.5dp"
                    android:orientation="horizontal"
                    android:background="#D15E05"
                    >

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="40sp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/social" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4sp"
                        android:layout_marginTop="5dp"
                        android:text="@string/facebook"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="50sp"
                        android:src="@drawable/google" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/Google"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="#000"/>


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>