<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#B6B3B3"
    tools:context = ".ProfileActivity"
    >



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/back"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
                android:layout_marginTop="5dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="235dp"
                android:scaleType="centerCrop"
                android:src="@drawable/blackgradient" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/profile"
                android:layout_marginTop="-58dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/CircleImageView"
                android:padding="5dp"
                app:strokeColor="#fff"
                app:strokeWidth="5dp"
                android:elevation="3dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/profile_edit"
                android:paddingStart="20dp"
                android:paddingEnd="1dp"
                android:layout_margin="20dp"
                android:padding="5dp">


               <ImageView
                   android:layout_width="30dp"
                   android:layout_height="30dp"
                   android:src="@drawable/edit"
                   android:layout_marginStart="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Edit_Profile"
                    android:layout_margin="10dp"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/profile_edit"
                android:paddingStart="20dp"
                android:paddingEnd="1dp"
                android:layout_margin="20dp"
                android:padding="5dp">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/share"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_profile"
                    android:layout_margin="10dp"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/profile_edit"
                android:paddingStart="20dp"
                android:paddingEnd="1dp"
                android:layout_margin="20dp"
                android:padding="5dp">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/notification"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications"
                    android:layout_margin="10dp"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/profile_edit"
                android:paddingStart="20dp"
                android:paddingEnd="1dp"
                android:layout_margin="20dp"
                android:padding="5dp">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/heart"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favourites"
                    android:layout_margin="10dp"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"/>




            </LinearLayout>





        </LinearLayout>







    </ScrollView>

</LinearLayout>